--- a/test/Chart3_Webville.html
+++ b/test/Chart3_Webville.html
@@ -3,8 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="Chart3_playlist.js"></script>
+    <script src="playlist_store.js"></script>
+    <link rel="stylesheet" href="chart3_playlist.css">
 </head>
 <body>
+<form>
+    <input type="text" id="songTextInput" size="40" placeholder="Song name">
+    <input type="button" id="addButton" value="AddSong">
+</form>
+<ul id="playlist">
 
+</ul>
 </body>
 </html>
